@@ -143,6 +143,7 @@ Version 2.1.1
    - Feature: Security settings available as options, no longer fixed
         constants
    - Feature: Sorting of headers can be configured by the user
+   - Feature: Context menus for expert dialog
 
 Version 2.1.0
  * Nicolas Rougier
